# cell2sentence4longevity-mcp

./: README.md  extract_first_genes.py  filter.py  mcp-config-server.json  mcp-config-stdio.json  pyproject.toml  pytest.ini
data/example/: vllm_payload.json
data/output/: klf6_knockout_result.json  opengenes_unique_first_genes.txt  unique_first_genes.txt
docs/: FILTERING.md  IMPLEMENTATION_SUMMARY.md  KNOCKOUT.md  MCP_PERFORMANCE.md
logs/: filter.json  knockout.json  mcp_server.json
notebook/: filter.py
src/: vllm.py
src/cell2sentence4longevity_mcp/: __init__.py  cli.py  knockout.py  server.py
test/: test_knockout.py  test_mcp.py  test_mcp_performance.py
